[gd_scene load_steps=106 format=3 uid="uid://dk3lrd7jg6unp"]

[ext_resource type="Texture2D" uid="uid://cpd6kdxmd5fev" path="res://assets/player/Main-Sheet.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://cde7qgkj848rc" path="res://scenes/player/player.gd" id="1_gmlin"]
[ext_resource type="Shape2D" uid="uid://kfops2sjttam" path="res://scenes/player/colisionPlayer.tres" id="3_gmlin"]
[ext_resource type="Shape2D" uid="uid://ca8c68a6gujjp" path="res://scenes/player/ataques.tres" id="4_lvxji"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t1aof"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 439, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qe1"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 439, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdvrm"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 439, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xbmr"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 439, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_hir57"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 481, 46, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7072n"]
atlas = ExtResource("1_8afob")
region = Rect2(46, 481, 46, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmu8b"]
atlas = ExtResource("1_8afob")
region = Rect2(92, 481, 46, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38bk"]
atlas = ExtResource("1_8afob")
region = Rect2(138, 481, 46, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_3chqh"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 577, 51, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwfqx"]
atlas = ExtResource("1_8afob")
region = Rect2(51, 577, 51, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_kssj8"]
atlas = ExtResource("1_8afob")
region = Rect2(102, 577, 51, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lfxt"]
atlas = ExtResource("1_8afob")
region = Rect2(153, 577, 51, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_lclul"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 524, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2d6"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 524, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvjb1"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 524, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_bysbl"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 524, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wy34"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 645, 48, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymths"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 645, 48, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p0jd"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 645, 48, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nf13"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 692, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y4ya"]
atlas = ExtResource("1_8afob")
region = Rect2(47, 692, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_s050l"]
atlas = ExtResource("1_8afob")
region = Rect2(94, 692, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sw5w"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 786, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4k4a"]
atlas = ExtResource("1_8afob")
region = Rect2(47, 786, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkc6f"]
atlas = ExtResource("1_8afob")
region = Rect2(94, 786, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_21yht"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 737, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_trum3"]
atlas = ExtResource("1_8afob")
region = Rect2(47, 737, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b1ex"]
atlas = ExtResource("1_8afob")
region = Rect2(94, 737, 47, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_dovo2"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvxji"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("1_8afob")
region = Rect2(288, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("1_8afob")
region = Rect2(336, 17, 48, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("1_8afob")
region = Rect2(288, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("1_8afob")
region = Rect2(336, 68, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("1_8afob")
region = Rect2(288, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("1_8afob")
region = Rect2(336, 162, 48, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("1_8afob")
region = Rect2(288, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("1_8afob")
region = Rect2(336, 115, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8cnd"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuxn4"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_46q5t"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_5miun"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u1tp"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq1ih"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 854, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ki0"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf5gj"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_avmva"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ioy2"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlhku"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws0t6"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 896, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxw46"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qxvo"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q8fn"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wva7c"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 230, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7obkq"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo27k"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_genst"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_niom3"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttakn"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8a5"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 277, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuka"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyqqp"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1xl"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1sw"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t3bg"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrbya"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 371, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahqnk"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 324, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb1ce"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 324, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncpa"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 324, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_upxxc"]
atlas = ExtResource("1_8afob")
region = Rect2(144, 324, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln3h3"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 324, 48, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygh0"]
atlas = ExtResource("1_8afob")
region = Rect2(240, 324, 48, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_h17s1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1aof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdvrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xbmr")
}],
"loop": true,
"name": &"attack_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hir57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7072n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmu8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38bk")
}],
"loop": true,
"name": &"attack_left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3chqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwfqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kssj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lfxt")
}],
"loop": true,
"name": &"attack_right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lclul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvjb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bysbl")
}],
"loop": true,
"name": &"attack_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wy34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymths")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p0jd")
}],
"loop": true,
"name": &"da単o_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nf13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y4ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s050l")
}],
"loop": true,
"name": &"da単o_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sw5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4k4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkc6f")
}],
"loop": true,
"name": &"da単o_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21yht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trum3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b1ex")
}],
"loop": true,
"name": &"da単o_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dovo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8cnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuxn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46q5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5miun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u1tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq1ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf5gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avmva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ioy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlhku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws0t6")
}],
"loop": true,
"name": &"muerte",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q8fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wva7c")
}],
"loop": true,
"name": &"run_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7obkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo27k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_genst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niom3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttakn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8a5")
}],
"loop": true,
"name": &"run_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyqqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t3bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrbya")
}],
"loop": true,
"name": &"run_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahqnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb1ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upxxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln3h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygh0")
}],
"loop": true,
"name": &"run_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p47bc"]
size = Vector2(16, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75vfm"]
size = Vector2(11.0013, 35.0013)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0owmy"]
size = Vector2(10.003, 34.9968)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvxji"]
size = Vector2(16, 25)

[node name="Player" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("1_gmlin")
metadata/_edit_group_ = true

[node name="anim" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_h17s1")
animation = &"idle_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -0.5)
shape = ExtResource("3_gmlin")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(2.76, 2.76)

[node name="ColAtaque2" type="Node2D" parent="CharacterBody2D"]

[node name="HitRight" type="Area2D" parent="CharacterBody2D/ColAtaque2"]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/ColAtaque2/HitRight"]
position = Vector2(12.75, 5)
shape = ExtResource("4_lvxji")
debug_color = Color(0.928848, 0.236142, 0.323657, 0.42)

[node name="HitLeft" type="Area2D" parent="CharacterBody2D/ColAtaque2"]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/ColAtaque2/HitLeft"]
position = Vector2(-13, 1.5)
shape = SubResource("RectangleShape2D_p47bc")
debug_color = Color(0.897219, 0.000193101, 0.772691, 0.42)

[node name="HitUp" type="Area2D" parent="CharacterBody2D/ColAtaque2"]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/ColAtaque2/HitUp"]
position = Vector2(-5.96046e-08, -11)
rotation = 1.57212
shape = SubResource("RectangleShape2D_75vfm")
debug_color = Color(1.15514e-06, 0.637711, 0.388473, 0.42)

[node name="HitDown" type="Area2D" parent="CharacterBody2D/ColAtaque2"]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/ColAtaque2/HitDown"]
position = Vector2(-2.50149, 10.9909)
rotation = 1.57383
shape = SubResource("RectangleShape2D_0owmy")
debug_color = Color(0.668856, 0.508138, 0.112493, 0.42)

[node name="Hurtbox" type="Area2D" parent="CharacterBody2D" groups=["player_hurtbox"]]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Hurtbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_lvxji")
debug_color = Color(0.311501, 0.493053, 1, 0.42)

[connection signal="area_entered" from="CharacterBody2D/ColAtaque2/HitRight" to="CharacterBody2D" method="_on_hit_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/ColAtaque2/HitLeft" to="CharacterBody2D" method="_on_hit_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/ColAtaque2/HitUp" to="CharacterBody2D" method="_on_hit_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/ColAtaque2/HitDown" to="CharacterBody2D" method="_on_hit_area_entered"]
